Fix text wrapping under image with figure element

--- a/src/scss/packages/image-example/src/_styles.scss
+++ b/src/scss/packages/image-example/src/_styles.scss
@@ -15,3 +15,11 @@
 .image-example .text-red {
     color: $theme-color-error;
 }
+
+.image-example figure {
+  display:table;
+}
+.image-example figcaption {
+  display:table-caption;
+  caption-side:bottom;
+}
